--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,7 +620,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/gif/Love\ Bali\ Property\ New\ Logo-3.gif") center center no-repeat;
+  background: url("../img/gif/gif.gif") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
