--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,6 +642,188 @@ section {
 }
 
 /*--------------------------------------------------------------
+# About 1
+--------------------------------------------------------------*/
+.about .content {
+  padding: 30px 0;
+}
+
+.about .content h3 {
+  font-weight: 700;
+  font-size: 34px;
+}
+
+.about .content p {
+  margin-bottom: 0;
+}
+
+.about .content .icon-box {
+  margin-top: 25px;
+}
+
+.about .content .icon-box h4 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 5px 0 10px 60px;
+}
+
+.about .content .icon-box i {
+  font-size: 48px;
+  float: left;
+  color: #68948E;
+}
+
+.about .content .icon-box p {
+  font-size: 15px;
+  color: #848484;
+  margin-left: 60px;
+}
+
+.about .image1 {
+  background: url("../img/fund/fund-3.mp4") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+@media (max-width: 991px) {
+  .about .image1 {
+    text-align: center;
+  }
+
+  .about .image1 img {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 667px) {
+  .about .image1 img {
+    max-width: 100%;
+  }
+}
+
+/*--------------------------------------------------------------
+# About 2
+--------------------------------------------------------------*/
+.about .content {
+  padding: 30px 0;
+}
+
+.about .content h3 {
+  font-weight: 700;
+  font-size: 34px;
+}
+
+.about .content p {
+  margin-bottom: 0;
+}
+
+.about .content .icon-box {
+  margin-top: 25px;
+}
+
+.about .content .icon-box h4 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 5px 0 10px 60px;
+}
+
+.about .content .icon-box i {
+  font-size: 48px;
+  float: left;
+  color: #68948E;
+}
+
+.about .content .icon-box p {
+  font-size: 15px;
+  color: #848484;
+  margin-left: 60px;
+}
+
+.about .image2 {
+  background: url("../img/fund/fund.mp4") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+@media (max-width: 991px) {
+  .about .image2 {
+    text-align: center;
+  }
+
+  .about .image2 img {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 667px) {
+  .about .image2 img {
+    max-width: 100%;
+  }
+}
+
+/*--------------------------------------------------------------
+# About 3
+--------------------------------------------------------------*/
+.about .content {
+  padding: 30px 0;
+}
+
+.about .content h3 {
+  font-weight: 700;
+  font-size: 34px;
+}
+
+.about .content p {
+  margin-bottom: 0;
+}
+
+.about .content .icon-box {
+  margin-top: 25px;
+}
+
+.about .content .icon-box h4 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 5px 0 10px 60px;
+}
+
+.about .content .icon-box i {
+  font-size: 48px;
+  float: left;
+  color: #68948E;
+}
+
+.about .content .icon-box p {
+  font-size: 15px;
+  color: #848484;
+  margin-left: 60px;
+}
+
+.about .image3 {
+  background: url("../img/fund/fund-2.mp4") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+@media (max-width: 991px) {
+  .about .image3 {
+    text-align: center;
+  }
+
+  .about .image3 img {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 667px) {
+  .about .image3 img {
+    max-width: 100%;
+  }
+}
+
+
+
+/*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
 .counts {
